<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Person_Finance</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Date">Date</string>
    <string name="Category">Category</string>
    <string name="title_activity_view__schedule">View_Schedule</string>
    <string name="Description">Description</string>
    <string name="title_activity_packages">Packages</string>
    <string name="Sub_Catagory">Sub Catagory</string>
    <string name="Add_Button">Add Schedule</string>
    <string name="View_Schedules">View Schedules</string>
    <string name="title_activity_category">Category</string>
    <string name="buttonAddCat">buttonAddCat</string>
    <string name="catname">catname</string>
    <string name="title_activity_sub_category">SubCategory</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_allocations">Allocations</string>
    <string name="title_activity_category_main">Category_main</string>
    <string name="title_activity_category__expenses">Category_Expenses</string>

</resources>
