<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/aaaa"
    tools:context=".Add_Schedule" >

    <TextView
        android:id="@+id/textViewCatId"
       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/dddd"
        android:layout_marginTop="32dp"
        android:text="@string/Date"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textViewCatName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner_addschedule_cat"
        android:layout_alignLeft="@+id/textView4"
        
        android:text="@string/Category"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/catname"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@+id/buttonAddCat"
        android:layout_marginBottom="16dp"
        android:layout_toRightOf="@+id/textViewAlAmount"
        android:background="#ffebcd"
        android:ems="10"
        android:hint="Type here description"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewAlAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/catname"
        android:layout_alignLeft="@+id/textView4"
        android:text="@string/Description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25dp" />

    <Spinner
        android:id="@+id/spinner_subcat"
        android:background="#ffebcd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewAlAmount"
        android:layout_alignRight="@+id/catname"
        android:layout_marginBottom="23dp"
        android:layout_toRightOf="@+id/textViewAlAmount"
        tools:listitem="@android:layout/simple_spinner_dropdown_item" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner_subcat"
        android:layout_alignLeft="@+id/textViewCatId"
        android:text="@string/Sub_Catagory"
        android:textAppearance="?android:attr/textAppearanceMedium"
       
        android:textSize="25dp" />

    <Spinner
        android:id="@+id/spinner_addschedule_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/spinner_subcat"
        android:layout_alignRight="@+id/spinner_subcat"
        android:layout_marginBottom="12dp"
        android:background="#ffebcd"
        tools:listitem="@android:layout/simple_spinner_dropdown_item" />

    <Button
        android:id="@+id/button_Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textViewAlAmount"
        android:background="#ff2400"
        android:text="View My Schedules"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <Button
        android:id="@+id/buttonAddCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewAlAmount"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="22dp"
        android:background="#ff2400"
        android:text="@string/Add_Button"
        android:textColor="#ffffff"
         android:textSize="25dp"  
         />

    <DatePicker
        android:id="@+id/dddd"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_Category"
        android:layout_marginTop="22dp"
        android:calendarViewShown="false"
         android:background="#ffebcd"
        android:spinnersShown="true" />

</RelativeLayout>