<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_viewsch_date1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="49dp"
        android:text="@string/Category"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_viewsch_date2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_viewsch_date1"
        android:layout_marginTop="52dp"
        android:text="@string/Sub_Catagory"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner_EditSchule_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView_viewsch_date1"
        android:layout_toRightOf="@+id/textView_viewsch_date2" />

    <Spinner
        android:id="@+id/spinner_EditSchule_subcat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_viewsch_date2"
        android:layout_toRightOf="@+id/textView_viewsch_date2" />

    <EditText
        android:id="@+id/editText_editSchedule_Des"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/textView_viewsch_date2"
        android:background="#ffebcd"
        android:ems="10" >
 		
        <requestFocus />
    </EditText>

    <DatePicker
        android:id="@+id/datePicker_editschedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner_EditSchule_cat"
        android:layout_alignParentRight="true"
   
        android:calendarViewShown="false" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:text="Date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinner_EditSchule_subcat"
        android:layout_marginTop="24dp"
        android:text="@string/Description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
